Fixes alignment and fonts.

--- a/styles.css
+++ b/styles.css
@@ -54,14 +54,16 @@
     color: white;
     line-height: 110px;
     float: left;
+    
 }
 
 .right-col {
     float: right;
-    margin-right: 6%;
+    margin-right: 10%;
     margin-top: 120px;
     display: flex;
     align-items: center;
+   
 }
 
 .right-col p {
@@ -69,6 +71,7 @@
     color: #5f5f5f;
     font-weight: 400;
     margin-right: 15px;
+    
 }
 
 #icon {
